--- a/ASPMVCmarket/ASPMVCmarket.csproj
+++ b/ASPMVCmarket/ASPMVCmarket.csproj
@@ -203,11 +203,25 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711231729059_InitialModel.cs" />
+    <Compile Include="Migrations\201711231729059_InitialModel.Designer.cs">
+      <DependentUpon>201711231729059_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711231851139_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201711231851139_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201711231851139_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711231856337_AddMembershipType.cs" />
+    <Compile Include="Migrations\201711231856337_AddMembershipType.Designer.cs">
+      <DependentUpon>201711231856337_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Car.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -286,6 +300,17 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201711231729059_InitialModel.resx">
+      <DependentUpon>201711231729059_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711231851139_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201711231851139_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711231856337_AddMembershipType.resx">
+      <DependentUpon>201711231856337_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
