--- a/ASPMVCmarket/ASPMVCmarket.csproj
+++ b/ASPMVCmarket/ASPMVCmarket.csproj
@@ -215,6 +215,14 @@
     <Compile Include="Migrations\201711231856337_AddMembershipType.Designer.cs">
       <DependentUpon>201711231856337_AddMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711231917446_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201711231917446_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201711231917446_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711232206125_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201711232206125_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201711232206125_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Car.cs" />
@@ -310,6 +318,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711231856337_AddMembershipType.resx">
       <DependentUpon>201711231856337_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711231917446_PopulateMembershipTypes.resx">
+      <DependentUpon>201711231917446_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711232206125_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201711232206125_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
