Added: -CarDetails view -Migrations
Changed:
-Car model
-Customer model
-IdentityModels (it's database model)
-MembershipType model
-Car controller
-Customer controller

--- a/ASPMVCmarket/ASPMVCmarket.csproj
+++ b/ASPMVCmarket/ASPMVCmarket.csproj
@@ -223,6 +223,22 @@
     <Compile Include="Migrations\201711232206125_ApplyAnnotationsToCustomerName.Designer.cs">
       <DependentUpon>201711232206125_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711271818594_AddMembershipTypeName.cs" />
+    <Compile Include="Migrations\201711271818594_AddMembershipTypeName.Designer.cs">
+      <DependentUpon>201711271818594_AddMembershipTypeName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711271823412_UpdateMembershipTypeNames.cs" />
+    <Compile Include="Migrations\201711271823412_UpdateMembershipTypeNames.Designer.cs">
+      <DependentUpon>201711271823412_UpdateMembershipTypeNames.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711271843429_AddBirthTimeToCustomerModel.cs" />
+    <Compile Include="Migrations\201711271843429_AddBirthTimeToCustomerModel.Designer.cs">
+      <DependentUpon>201711271843429_AddBirthTimeToCustomerModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711282056428_CarModelUpdate.cs" />
+    <Compile Include="Migrations\201711282056428_CarModelUpdate.Designer.cs">
+      <DependentUpon>201711282056428_CarModelUpdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Car.cs" />
@@ -297,6 +313,7 @@
     <Content Include="Views\Car\CarIndex.cshtml" />
     <Content Include="Views\Customer\CustomerDetails.cshtml" />
     <Content Include="Views\Customer\CustomerIndex.cshtml" />
+    <Content Include="Views\Car\CarDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -324,6 +341,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711232206125_ApplyAnnotationsToCustomerName.resx">
       <DependentUpon>201711232206125_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711271818594_AddMembershipTypeName.resx">
+      <DependentUpon>201711271818594_AddMembershipTypeName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711271823412_UpdateMembershipTypeNames.resx">
+      <DependentUpon>201711271823412_UpdateMembershipTypeNames.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711271843429_AddBirthTimeToCustomerModel.resx">
+      <DependentUpon>201711271843429_AddBirthTimeToCustomerModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711282056428_CarModelUpdate.resx">
+      <DependentUpon>201711282056428_CarModelUpdate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
