Working on CarIndex and CarDetails views

--- a/ASPMVCmarket/ASPMVCmarket.csproj
+++ b/ASPMVCmarket/ASPMVCmarket.csproj
@@ -261,6 +261,10 @@
     <Compile Include="Migrations\201711282056428_CarModelUpdate.Designer.cs">
       <DependentUpon>201711282056428_CarModelUpdate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801142213284_AddSlogansImagePathShortDescription.cs" />
+    <Compile Include="Migrations\201801142213284_AddSlogansImagePathShortDescription.Designer.cs">
+      <DependentUpon>201801142213284_AddSlogansImagePathShortDescription.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Car.cs" />
@@ -483,7 +487,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
+    <Content Include="Views\Home\Founder.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
@@ -513,6 +517,8 @@
     <Content Include="Views\Customer\CustomerIndex.cshtml" />
     <Content Include="Views\Car\CarDetails.cshtml" />
     <Content Include="Views\Customer\CustomerForm.cshtml" />
+    <Content Include="Views\Home\News.cshtml" />
+    <Content Include="Views\Home\About.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -552,6 +558,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711282056428_CarModelUpdate.resx">
       <DependentUpon>201711282056428_CarModelUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801142213284_AddSlogansImagePathShortDescription.resx">
+      <DependentUpon>201801142213284_AddSlogansImagePathShortDescription.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
