--- a/ASPMVCmarket/ASPMVCmarket.csproj
+++ b/ASPMVCmarket/ASPMVCmarket.csproj
@@ -279,6 +279,10 @@
     <Compile Include="Migrations\201801172124348_AddedRequiredParamInCarModel.Designer.cs">
       <DependentUpon>201801172124348_AddedRequiredParamInCarModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801201633218_UpdateIdentityModel.cs" />
+    <Compile Include="Migrations\201801201633218_UpdateIdentityModel.Designer.cs">
+      <DependentUpon>201801201633218_UpdateIdentityModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Car.cs" />
@@ -534,6 +538,8 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Car\CarEdit.cshtml" />
     <Content Include="Views\User\UserIndex.cshtml" />
+    <Content Include="Views\User\UserDetails.cshtml" />
+    <Content Include="Views\User\UserEdit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -585,6 +591,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801172124348_AddedRequiredParamInCarModel.resx">
       <DependentUpon>201801172124348_AddedRequiredParamInCarModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801201633218_UpdateIdentityModel.resx">
+      <DependentUpon>201801201633218_UpdateIdentityModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
